--- a/NFW_check/NFW_gal_check.ipynb
+++ b/NFW_check/NFW_gal_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "aae60942-070c-4a40-87a4-3ffd2eb13f1e",
    "metadata": {},
    "outputs": [],
@@ -13,8 +13,7 @@
     "from astropy.cosmology import FlatLambdaCDM\n",
     "import astropy.units as u\n",
     "from astropy.cosmology import Planck18\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.interpolate import interp1d"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
