update SNR crossmatch scripts

--- a/SNR_crosscheck/SNR_significant_lines.ipynb
+++ b/SNR_crosscheck/SNR_significant_lines.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "b3b678bf",
    "metadata": {},
    "outputs": [
@@ -456,16 +456,21 @@
     }
    ],
    "source": [
-    "def create_graph(gal_type,dataset,runtype,cut):\n",
+    "def create_graph(gal_type,dataset,runtype):\n",
     "    valid_snr_narrow,noise,valid_wave = load_results(gal_type,dataset,runtype,cut)\n",
     "    smoothed_narrow = valid_snr_narrow * noise\n",
     "    snr_narrow=compute_real_SNR(valid_wave,smoothed_narrow)\n",
     "    plot_SNR(snr_narrow,valid_wave,gal_type,dataset,runtype)\n",
     "\n",
-    "create_graph('LRG','loa','skyfiber', cut = False)\n",
-    "create_graph('BGS','loa','skyfiber', cut = False)\n",
-    "create_graph('BGS','iron','galaxy', cut = False)\n",
-    "create_graph('LRG','iron','galaxy', cut = False)"
+    "create_graph('LRG','loa','skyfiber')\n",
+    "create_graph('BGS','loa','skyfiber')\n",
+    "create_graph('LRG','iron','skyfiber')\n",
+    "create_graph('BGS','iron','skyfiber')\n",
+    "\n",
+    "create_graph('BGS','loa','galaxy')\n",
+    "create_graph('LRG','loa','galaxy')\n",
+    "create_graph('BGS','iron','galaxy')\n",
+    "create_graph('LRG','iron','galaxy')"
    ]
   },
   {
