--- a/SNR_crosscheck/SNR_significant_lines.ipynb
+++ b/SNR_crosscheck/SNR_significant_lines.ipynb
@@ -16,16 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "02dfc08f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_results(gal_type,dataset,runtype,cut):\n",
-    "    if cut == True:\n",
-    "        path = f\"cut_{gal_type}_{dataset}_{runtype}_coadd_results.npz\"\n",
-    "    else:\n",
-    "        path = f\"{gal_type}_{dataset}_{runtype}_coadd_results.npz\"\n",
+    "def load_results(gal_type,dataset,runtype):\n",
+    "    path = f\"{gal_type}_{dataset}_{runtype}_coadd_results.npz\"\n",
     "    data = np.load(path)\n",
     "    # wavelength grid\n",
     "    wave = data['wavelength']    \n",
@@ -33,12 +30,9 @@
     "    valid_bins = data['valid_bins']\n",
     "    # smoothed residuals (gaussian)\n",
     "    snr_narrow = data['snr_narrow']  #3 A\n",
-    "    # print(find_peaks(snr_narrow))\n",
-    "    # print(max(snr_narrow))\n",
     "    # snr_broad = data['snr_broad']  #15 A\n",
     "    noise = data['noise']\n",
     "    noise = noise[valid_bins]\n",
-    "    # (differs by 1 bin - masking!)\n",
     "    valid_wave = wave[valid_bins]\n",
     "    valid_snr_narrow = snr_narrow[valid_bins]\n",
     "    # valid_snr_broad = snr_broad[valid_bins]\n",
@@ -48,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0ff66fc4",
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_unassociated_extrema(wave,snr,min_wave=None):\n",
     "    n_extrema = 5\n",
-    "    # all known observed emission lines (updated)\n",
+    "    # all known observed emission lines\n",
     "    known_lines =  [770.409, 780.324, 937.814, 949.742, 977.030, 989.790, 991.514,\n",
     "                        991.579, 1025.722, 1031.912, 1037.613, 1066.660, 1215.670,\n",
     "                        1238.821, 1242.804, 1260.422, 1264.730, 1302.168, 1334.532, \n",
@@ -166,46 +160,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b1f0a0c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_real_SNR(wave,smoothed_narrow):\n",
-    "    # all var passed in have length 2950 (valid bins) \n",
-    "    bin_size=400\n",
-    "    step = 200\n",
-    "    # initial snr/noise to be same shape as residual with 3 A gaussian\n",
-    "    noise = np.full_like(smoothed_narrow, np.nan)\n",
-    "    snr_narrow = np.full_like(smoothed_narrow, np.nan)\n",
-    "    # wavelength range\n",
-    "    wave_min = np.min(wave)\n",
-    "    wave_max = np.max(wave)\n",
-    "    # bins\n",
-    "    bin_starts = np.arange(wave_min,wave_max,step)\n",
-    "\n",
-    "    for i,bin_start in enumerate(bin_starts):\n",
-    "        end = bin_start + bin_size\n",
-    "        # wavelength in range\n",
-    "        bin_mask = (wave>= bin_start) & (wave <= end)\n",
-    "        \n",
-    "        # get data in range\n",
-    "        window_narrow = smoothed_narrow[bin_mask]\n",
-    "        # calculate noise/error\n",
-    "        p16 = (np.percentile(window_narrow, 16))\n",
-    "        p84 = (np.percentile(window_narrow, 84))\n",
-    "        sigma = 0.5 * (p84 - p16)\n",
-    "        # print(sigma)\n",
-    "        # assign noise to all point in bin\n",
-    "        noise[bin_mask] = sigma\n",
-    "        # calculate SNR for this bin\n",
-    "        snr_narrow[bin_mask] = smoothed_narrow[bin_mask]/sigma\n",
-    "\n",
-    "    return snr_narrow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "caac53cb",
    "metadata": {},
    "outputs": [],
@@ -222,15 +176,12 @@
     "        plt.xlim(min_wave,max_wave)\n",
     "        peaks, valleys = find_unassociated_extrema(valid_wave, snr,min_wave)\n",
     "        mask = valid_wave >= min_wave\n",
-    "        cut_snr = snr[mask]\n",
     "        plt.ylim(-6.5, 6.5)\n",
     "    elif dataset == 'iron' and gal_type == 'LRG':\n",
     "        min_wave = 1754 \n",
     "        plt.xlim(min_wave,max_wave)\n",
     "        peaks, valleys = find_unassociated_extrema(valid_wave, snr,min_wave)\n",
     "        mask = valid_wave >= min_wave\n",
-    "        cut_snr = snr[mask]\n",
-    "\n",
     "    else:\n",
     "        peaks, valleys = find_unassociated_extrema(valid_wave, snr)\n",
     "        min_wave, max_wave = plt.xlim()\n",
@@ -457,10 +408,8 @@
    ],
    "source": [
     "def create_graph(gal_type,dataset,runtype):\n",
-    "    valid_snr_narrow,noise,valid_wave = load_results(gal_type,dataset,runtype,cut)\n",
-    "    smoothed_narrow = valid_snr_narrow * noise\n",
-    "    snr_narrow=compute_real_SNR(valid_wave,smoothed_narrow)\n",
-    "    plot_SNR(snr_narrow,valid_wave,gal_type,dataset,runtype)\n",
+    "    valid_snr_narrow,noise,valid_wave = load_results(gal_type,dataset,runtype)\n",
+    "    plot_SNR(valid_snr_narrow,valid_wave,gal_type,dataset,runtype)\n",
     "\n",
     "create_graph('LRG','loa','skyfiber')\n",
     "create_graph('BGS','loa','skyfiber')\n",
@@ -472,14 +421,6 @@
     "create_graph('BGS','iron','galaxy')\n",
     "create_graph('LRG','iron','galaxy')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c205ef8d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
