run SNR crossmatch

--- a/SNR_crosscheck/snr_crossmatch.ipynb
+++ b/SNR_crosscheck/snr_crossmatch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "264d6f6e-ae51-4e6f-9fd6-a6e66c6fa5cd",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "72458268-eca0-4db1-8ab7-a6b1539ec184",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,6 @@
     "        if len(datasets) >= 2:\n",
     "            final_results.append({\n",
     "                \"mean_wave\": np.mean([c[\"wave\"] for c in cluster]),\n",
-    "                \"sigma_wave\": np.std([c[\"wave\"] for c in cluster]),\n",
     "                \"datasets\": sorted(datasets),\n",
     "                \"snrs\": [c[\"snr\"] for c in cluster],\n",
     "                \"n_recovered\": len(datasets)\n",
@@ -64,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "79f31f8d-168a-4b6b-b73c-db03a51cd4cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_results(gal_type,dataset,runtype):\n",
     "    # load results\n",
-    "    path = f\"{gal_type}_{dataset}_{runtype}_coadd_results.npz\"\n",
+    "    path = f\"/Users/aizaali/Desktop/desi_data/coadd_results/{gal_type}_{dataset}_{runtype}_coadd_results.npz\"\n",
     "    data = np.load(path)\n",
     "\n",
     "    wave = data['wavelength']    \n",
@@ -101,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "7fdf37ae",
    "metadata": {},
    "outputs": [],
@@ -156,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "990340d6-b225-4305-975f-44b06ff670a0",
    "metadata": {},
    "outputs": [],
@@ -194,13 +193,104 @@
     "            f\"datasets = {m['datasets']}\"\n",
     "        )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "41b4e04f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done loading results\n",
+      "BGS_loa_galaxy has 47 SNR points with value >= 2.5\n",
+      "done loading results\n",
+      "LRG_loa_galaxy has 40 SNR points with value >= 2.5\n",
+      "done loading results\n",
+      "BGS_loa_skyfiber has 29 SNR points with value >= 2.5\n",
+      "done loading results\n",
+      "LRG_loa_skyfiber has 26 SNR points with value >= 2.5\n",
+      "done loading results\n",
+      "BGS_iron_galaxy has 45 SNR points with value >= 2.5\n",
+      "done loading results\n",
+      "LRG_iron_galaxy has 40 SNR points with value >= 2.5\n",
+      "done loading results\n",
+      "BGS_iron_skyfiber has 30 SNR points with value >= 2.5\n",
+      "done loading results\n",
+      "LRG_loa_skyfiber has 26 SNR points with value >= 2.5\n",
+      "crossmatching....\n",
+      "Found 56 lines recovered in ≥ 2 datasets\n",
+      "Ignoring known lines...\n",
+      "Results saved to 'LOA_GAL_crossmatch_results.csv'\n",
+      "λ = 3935.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 6586.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 4872.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 9533.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 4387.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 4365.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 5270.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 8501.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 1931.00 Å | N = 3 | datasets = ['BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 6598.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 2798.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 5185.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 9024.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 5172.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 1933.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 9019.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 3729.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 5009.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 6536.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 1934.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 5877.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 6565.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 5894.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 9014.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 9072.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 2193.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 6750.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 8545.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 7048.00 Å | N = 3 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result']\n",
+      "λ = 6734.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 9092.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 4307.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 7666.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 6719.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 6575.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 5786.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 4863.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
+      "λ = 9377.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 6600.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 5173.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 1800.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 9421.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 1656.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 8870.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 9025.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 9827.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 1908.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 9443.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 2799.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 4103.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 5895.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 7667.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 1550.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
+      "λ = 8809.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n"
+     ]
+    }
+   ],
+   "source": [
+    "main()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DESI main",
+   "display_name": "base",
    "language": "python",
-   "name": "desi-main"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -212,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
