run SNR crosscheck (fr)

--- a/SNR_crosscheck/snr_crossmatch.ipynb
+++ b/SNR_crosscheck/snr_crossmatch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "264d6f6e-ae51-4e6f-9fd6-a6e66c6fa5cd",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "72458268-eca0-4db1-8ab7-a6b1539ec184",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,8 @@
     "        for j in range(i + 1, len(all_lines)):\n",
     "            if used[j]:\n",
     "                continue\n",
-    "            if abs(all_lines[j][\"wave\"] - line[\"wave\"]) <= 0.1:\n",
+    "            # if lines within 1 A of each other, theyre a match!\n",
+    "            if abs(all_lines[j][\"wave\"] - line[\"wave\"]) <= 1:\n",
     "                cluster.append(all_lines[j])\n",
     "                used[j] = True\n",
     "\n",
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "79f31f8d-168a-4b6b-b73c-db03a51cd4cf",
    "metadata": {},
    "outputs": [],
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "7fdf37ae",
    "metadata": {},
    "outputs": [],
@@ -148,21 +149,21 @@
     "                        9850.260, 9913.000, 10027.730, 10031.160, 10049.368, 10286.730,\n",
     "                        10320.490, 10336.410, 10746.800, 10830.340, 10938.086]\n",
     "    for m in matches:\n",
-    "        if not any(abs(m[\"mean_wave\"] - k) <= 0.1 for k in known_lines):\n",
+    "        if not any(abs(m[\"mean_wave\"] - k) <= 1 for k in known_lines):\n",
     "            clean.append(m)\n",
     "    return clean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "990340d6-b225-4305-975f-44b06ff670a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
     "    all_types = ['BGS_loa_galaxy', 'LRG_loa_galaxy', 'BGS_loa_skyfiber', 'LRG_loa_skyfiber',\n",
-    "                'BGS_iron_galaxy', 'LRG_iron_galaxy', 'BGS_iron_skyfiber', 'LRG_loa_skyfiber']\n",
+    "                'BGS_iron_galaxy', 'LRG_iron_galaxy', 'BGS_iron_skyfiber', 'LRG_iron_skyfiber']\n",
     "    # initialize results dictionary\n",
     "    results = {}\n",
     "    for type in all_types:\n",
@@ -183,20 +184,20 @@
     "\n",
     "    df_filtered = pd.DataFrame(final_result)\n",
     "\n",
-    "    df_filtered.to_csv('LOA_GAL_crossmatch_results.csv', index=False)\n",
-    "    print(\"Results saved to 'LOA_GAL_crossmatch_results.csv'\")\n",
+    "    df_filtered.to_csv('1_crossmatch_results.csv', index=False)\n",
+    "    print(\"Results saved to '1_crossmatch_results.csv'\")\n",
     "\n",
-    "    for m in final_result:\n",
-    "        print(\n",
-    "            f\"λ = {m['mean_wave']:.2f} Å | \"\n",
-    "            f\"N = {m['n_recovered']} | \"\n",
-    "            f\"datasets = {m['datasets']}\"\n",
-    "        )"
+    "    # for m in final_result:\n",
+    "    #     print(\n",
+    "    #         f\"λ = {m['mean_wave']:.2f} Å | \"\n",
+    "    #         f\"N = {m['n_recovered']} | \"\n",
+    "    #         f\"datasets = {m['datasets']}\"\n",
+    "    #     )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "id": "41b4e04f",
    "metadata": {},
    "outputs": [
@@ -219,65 +220,11 @@
       "done loading results\n",
       "BGS_iron_skyfiber has 30 SNR points with value >= 2.5\n",
       "done loading results\n",
-      "LRG_loa_skyfiber has 26 SNR points with value >= 2.5\n",
+      "LRG_iron_skyfiber has 27 SNR points with value >= 2.5\n",
       "crossmatching....\n",
-      "Found 56 lines recovered in ≥ 2 datasets\n",
+      "Found 57 lines recovered in ≥ 2 datasets\n",
       "Ignoring known lines...\n",
-      "Results saved to 'LOA_GAL_crossmatch_results.csv'\n",
-      "λ = 3935.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 6586.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 4872.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 9533.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 4387.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 4365.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 5270.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 8501.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 1931.00 Å | N = 3 | datasets = ['BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 6598.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 2798.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 5185.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 9024.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 5172.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 1933.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 9019.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 3729.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 5009.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 6536.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 1934.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 5877.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 6565.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 5894.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 9014.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 9072.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 2193.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 6750.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 8545.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 7048.00 Å | N = 3 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result']\n",
-      "λ = 6734.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 9092.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 4307.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 7666.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 6719.00 Å | N = 4 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result', 'LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 6575.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 5786.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 4863.00 Å | N = 2 | datasets = ['BGS_iron_galaxy_result', 'BGS_loa_galaxy_result']\n",
-      "λ = 9377.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 6600.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 5173.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 1800.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 9421.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 1656.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 8870.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 9025.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 9827.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 1908.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 9443.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 2799.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 4103.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 5895.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 7667.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 1550.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n",
-      "λ = 8809.00 Å | N = 2 | datasets = ['LRG_iron_galaxy_result', 'LRG_loa_galaxy_result']\n"
+      "Results saved to '1_crossmatch_results.csv'\n"
      ]
     }
    ],
