work on surface density calculations

--- a/copute_dark_matter_emissivity/calculations.ipynb
+++ b/copute_dark_matter_emissivity/calculations.ipynb
@@ -2,11 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e381b117",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def delta_sigma(R):\n",
+    "    # not R is in kpc\n",
+    "    A = 3.8\n",
+    "    alpha = -.76\n",
+    "    return ((R/1000)**alpha) * A"
+   ]
   },
   {
    "cell_type": "code",
@@ -15,15 +21,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main()\n",
+    "def main():\n",
+    "    # note : delta_sigma (R) = sigma(R)\n",
     "    # surface mass density\n",
-    "    sigma_R ="
+    "    # in paper R_BGS = 40 kpc\n",
+    "    # in paper R_LRG = 70 kpc\n",
+    "    delta_sigma_R_BGS = delta_sigma(40)\n",
+    "    delta_sigma_R_LRG = delta_sigma(70)\n",
+    "    # in paper sigma_R_BGS --> 70 hM_s / pc^2\n",
+    "    # in paper sigma_R_LRG --> 145 hM_s / pc^2\n",
+    "    correction_BGS = 2# should be 1.6\n",
+    "    correction_LRG = # should be more than 1.6\n",
+    "    sigma_R_BGS = delta_sigma_R_BGS * correction_BGS\n",
+    "    print(f\"BGS:{sigma_R_BGS}\")\n",
+    "    sigma_R_LRG = delta_sigma_R_LRG * correction_LRG\n",
+    "    print(f\"LRG:{sigma_R_LRG}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9b3d57d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BGS:87.7501765396766\n",
+      "LRG:57.35074737778642\n"
+     ]
+    }
+   ],
+   "source": [
+    "main()"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
