--- a/copute_dark_matter_emissivity/calculations.ipynb
+++ b/copute_dark_matter_emissivity/calculations.ipynb
@@ -2,20 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e381b117",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def delta_sigma(R):\n",
-    "    # not R is in kpc\n",
-    "    A = 3.8\n",
-    "    alpha = -.76\n",
-    "    return ((R/1000)**alpha) * A"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "f5c8be64",
    "metadata": {},
@@ -26,21 +12,17 @@
     "    # surface mass density\n",
     "    # in paper R_BGS = 40 kpc\n",
     "    # in paper R_LRG = 70 kpc\n",
-    "    delta_sigma_R_BGS = delta_sigma(40)\n",
-    "    delta_sigma_R_LRG = delta_sigma(70)\n",
     "    # in paper sigma_R_BGS --> 70 hM_s / pc^2\n",
     "    # in paper sigma_R_LRG --> 145 hM_s / pc^2\n",
-    "    correction_BGS = 2# should be 1.6\n",
-    "    correction_LRG = # should be more than 1.6\n",
-    "    sigma_R_BGS = delta_sigma_R_BGS * correction_BGS\n",
+    "    sigma_R_BGS = 40 * 1.76 #(around)\n",
     "    print(f\"BGS:{sigma_R_BGS}\")\n",
-    "    sigma_R_LRG = delta_sigma_R_LRG * correction_LRG\n",
+    "    sigma_R_LRG = 90 * 1.76\n",
     "    print(f\"LRG:{sigma_R_LRG}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "9b3d57d7",
    "metadata": {},
    "outputs": [
@@ -48,8 +30,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BGS:87.7501765396766\n",
-      "LRG:57.35074737778642\n"
+      "BGS:43.8750882698383\n",
+      "LRG:28.67537368889321\n"
      ]
     }
    ],
