--- a/SNR/snr_peaks.ipynb
+++ b/SNR/snr_peaks.ipynb
@@ -6,7 +6,37 @@
    "id": "c9b7f778",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math\n",
+    "import numpy as np\n",
+    "import astropy.cosmology\n",
+    "from astropy.cosmology import FlatLambdaCDM\n",
+    "import astropy.units as u\n",
+    "from astropy.cosmology import Planck18\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.interpolate import interp1d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07432434",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b75887b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# main()"
+   ]
   }
  ],
  "metadata": {
